--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
+    "aos": "^2.3.4",
     "jquery": "^3.7.1",
     "mixitup": "^3.3.2",
     "slick-slider": "^1.8.2"
